Fixing details (campaign spacing 2)

--- a/templates/g5_helium/custom/scss/tchooz.scss
+++ b/templates/g5_helium/custom/scss/tchooz.scss
@@ -1211,6 +1211,8 @@ input:focus + .em-slider {
 }
 .em-mb-44{
   margin-bottom: 44px;
+}
+.em-mt-44{
   margin-top: 44px;
 }
 .em-mb-64{
